commit b678bee75ba444b375a77556814bc3238cdbab9b
Merge: f2e9c6e 3852ebb
Author: vrovachev <vrovachev@mirantis.com>
Date:   Thu Mar 28 20:37:22 2013 +0400

    Merge branch 'QA' of https://github.com/Mirantis/savanna into QA

commit f2e9c6ef0510ab77caa63d7b3d260c72cca404b4
Author: vrovachev <vrovachev@mirantis.com>
Date:   Thu Mar 28 20:37:13 2013 +0400

    add unit tests

commit 3852ebb484e956cd613b41ecd18f6ec76f6298cc
Author: LobankovYV <lobankovyy@lobankovyy-desktop.(none)>
Date:   Thu Mar 28 18:36:32 2013 +0400

    add new negative tests for cluster

commit 0956efa19a716a750b4e77c542226d9e5c9556f2
Author: vrovachev <vrovachev@mirantis.com>
Date:   Thu Mar 28 18:34:07 2013 +0400

    add new changes in stackforge and add unit tests for nt

commit e3fea9bddbf675aaf4ecb5707f143701a1639c4e
Author: vrovachev <vrovachev@mirantis.com>
Date:   Wed Mar 27 20:27:12 2013 +0400

    add changes from last version in stackrorge

commit 0baa0343de51c90afaec705a5f361cb9351dac3c
Author: vrovachev <vrovachev@mirantis.com>
Date:   Wed Mar 27 20:19:04 2013 +0400

    add unit tests for nt

commit 3a589a8a1ff73c5e4b22caf2e42082e64460889a
Author: vrovachev <vrovachev@mirantis.com>
Date:   Wed Mar 27 19:26:06 2013 +0400

    add unit tests for nt

commit 8ed9033be2c670dffa742756682b6f06a462dcef
Author: LobankovYV <lobankovyy@lobankovyy-desktop.(none)>
Date:   Wed Mar 27 19:23:32 2013 +0400

    add negative and positive tests for cluster

commit d59971a894b1c53359bb319a57c938d177f2ddde
Author: LobankovYV <lobankovyy@lobankovyy-desktop.(none)>
Date:   Wed Mar 27 19:14:47 2013 +0400

    add negative and positive tests for cluster

commit 9f396c17af88ebcf9483c95515bb9d9c30024344
Merge: b002cdc 75ef01d
Author: vrovachev <vrovachev@mirantis.com>
Date:   Wed Mar 27 18:02:12 2013 +0400

    Merge branch 'QA' of https://github.com/Mirantis/savanna into QA

commit b002cdcef5c4ddbf3ffef889935b7a4af9a90cc3
Author: vrovachev <vrovachev@mirantis.com>
Date:   Wed Mar 27 18:02:04 2013 +0400
