@@ -17,8 +17,8 @@ echo "=============================="
 # Until all these issues get fixed, ignore.
 PEP8='python tools/hacking.py --ignore=N301'
 
-EXCLUDE='--exclude=.venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*'
-EXCLUDE+=',*egg,build,*hacking.py'
+EXCLUDE1='--exclude=.venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*'
+EXCLUDE=$EXCLUDE1+',*egg,build,*hacking.py'
 ${PEP8} ${EXCLUDE} .
 
 ${PEP8} --filename=savanna* bin
